fix: set z-index of asides to 9999

--- a/client/src/styles/scss/canvas.scss
+++ b/client/src/styles/scss/canvas.scss
@@ -80,8 +80,12 @@ main {
 
     grid-row:2;
 
-section {
+  aside {
+    position: absolute;
+    z-index:9999;
+  }
 
+section {
   grid-row: 2;
   grid-column: 1 / span 2;
   width: 100%;
